# twr

./: CLAUDE.md  CLI_REFACTORING_PROPOSAL.md  Makefile  README.md  README.md.old  STORAGE_ANALYSIS.md  benchmark.py  benchmark_100k.txt  benchmark_results.txt  docker-compose.yml  event_generator.py  main.py  pyproject.toml  python_view.py  query_redesign.sql
migrations/: 01_create_tables.sql  01_raw_data.sql.j2  01_schema.sql  02_create_triggers.sql  02_cumulative_cashflow.sql  02_price_update.sql.j2  02_triggers.sql  03_base_views.sql  03_base_views.sql.j2  03_cashflow.sql  03_create_base_views.sql  03_create_cache.sql  03_create_views.sql  03_user_product_timeline.sql.j2  04_cache.sql  04_cache.sql.j2  04_create_cache.sql  04_create_views.sql  04_cumulative_cashflow.sql  04_cumulative_cashflow.sql.j2  04_user_timeline.sql.j2  05_combined_views.sql  05_combined_views.sql.j2  05_create_combined_views.sql  05_user_product_timeline.sql.j2  06_user_product_timeline_business_views.sql.j2  07_user_timeline_business_views.sql.j2  99_repair.sql.j2  drop_all.sh  granularities.json  granularities.py  refresh_views.sh  run_migrations.sh
migrations_backup/: 02_cumulative_cashflow.sql  03_user_product_timeline.sql.j2
src/old/: benchmark.py
src/performance/: benchmark.py  drop.py  generate.py  granularities.py  interface.py  iter_utils.py  migrate.py  models.py  refresh_utils.py  reset.py  settings.py  utils.py
src/tests/: conftest.py  test_add_cashflows.py  test_cache_retention.py  test_cashflow.py  test_dense_price_update.py  test_iter_utils.py  test_models.py  test_query_user.py  test_query_user_product.py  test_refresh_cumulative_cashflows.py  test_refresh_interface.py  test_refresh_user_product_timeline.py  test_refresh_user_timeline.py  test_same_timestamp_bug.py  utils.py
src/twr/: .!63608!dashboard.py  .!63726!dashboard.py  __init__.py  benchmark.py  benchmark2.py  dashboard.py  dashboard_utils.py  drop.py  generate.py  migrate.py  models.py  refresh.py  reset.py  time_utils.py  utils.py  vacuum.py
tests/: test_twr.py
twr/: __init__.py  benchmark.py  database.py  event_generator.py
