[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance"
version = "0.1.0"
description = "Time-Weighted Return calculation system with PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["asyncpg>=0.31.0", "jinja2>=3.1.0", "psycopg2-binary>=2.9.11"]

[dependency-groups]
dev = [
  "plotly>=6.5.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.24.0",
  "testcontainers[postgres]",
  "watchdog>=6.0.0",
  "faker>=24.0.0",
  "streamlit>=1.52.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "rich>=14.2.0",
  "pudb>=2025.1.5",
  "ruff>=0.11.12",
  "mypy>=1.18.2",
  "asyncpg-stubs>=0.31.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["src/performance/generate.py", "src/performance/benchmark.py"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true
